# keil-cmake

./: .gitignore  .mxproject  README.md  uart.ioc
CMake/: CMakeLists.txt
Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
